[GTK][WPE] Fix the matching of an empty value in getCgroupControllerPath() when only cgroupsV2 hierarchy is found https://bugs.webkit.org/show_bug.cgi?id=213646

Reviewed by Adrian Perez de Castro.

* UIProcess/linux/MemoryPressureMonitor.cpp:
(WebKit::getCgroupFile):
(WebKit::getCgroupControllerPath):
(WebKit::systemMemoryUsedAsPercentage):


Canonical link: https://commits.webkit.org/226461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263589 268f45cc-cd09-0410-ab3c-d52691b4dbfc